src/objects/APTS_Stage_Local_Operational_Data__c.object
<CustomObject>
    <description>Staging Object for Local Operational Data Object</description>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <description>Field to capture country for the LSO data.</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_LP_Account_GUID__c</fullName>
        <label>Account GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Incoterms__c</fullName>
        <label>Incoterms</label>
        <picklist>
            <picklistValues>
                <fullName>CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZVR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Local_Channel__c</fullName>
        <label>Local Channel</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_SAP_Customer_ID__c</fullName>
        <description>Placeholder field to hold the value of customer ID fetched from SAP.</description>
        <label>SAP Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Organisation__c</fullName>
        <label>Sales Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Operational Data</label>
        <referenceTo>APTS_LP_Local_Customer_Reference_Data__c</referenceTo>
        <relationshipLabel>Stage Local Operational Data</relationshipLabel>
        <relationshipName>Stage_Local_Operational_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Terms__c</fullName>
        <description>Field to capture payment terms associated with Apttus LSO object record.</description>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>RowStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Division__c</fullName>
        <label>APTS SAP Division</label>
        <picklist>
            <picklistValues>
                <fullName>ZZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stage Local Operational Data</label>
    <nameField>
        <displayFormat>LCRD-{00000}</displayFormat>
        <label>Apttus Local Customer Reference Data Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Local Operational Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>